# Planting-Optimisation-Tool

./: .gitignore  CONTRIBUTING.md
.github/: pull_request_template.md
.github/workflows/: backend-ci.yml  cascading-assignment.yml  node.js.yml  review_checklist.yml
backend/: SCHEMA.md  alembic.ini  docker-compose.yml  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 2025_12_13_0154-added_boundary_table_with_polygon_type-8ce19d41a4f1.py
backend/src/models/: __init__.py  boundaries.py  farm.py  species.py  user.py
backend/src/schemas/: farm.py
backend/tests/: conftest.py  test_connectivity.py  test_schema_integrity.py
datascience/: pyproject.toml
datascience/gis/: README.md
frontend/: eslint.config.mjs  package-lock.json  package.json
gis/: demo_riparian.py  pyproject.toml
gis/config/: settings.py
gis/core/: extract_data.py  farm_profile.py  gee_client.py  geometry_parser.py  riparian.py
gis/docs/: README.md  farm_boundaries_minimal.gpkg
gis/notebook/: all_farm_environmental_factors.csv  eda_gee.ipynb  extract_environmental_factor_each_farm.ipynb  test_extraction.py  valid_check_environmental_factor_each_farm.ipynb
gis/sapling_estimation/: estimate.py  planting_points.py  rotation.py  slope_raster.py  slope_rules.py
gis/tests/: test_gis.py  test_planting_points.py  test_rotation.py  test_slope_rules.py
gis/utils/: build_farm_geolocation.py  build_farm_table.py
